force-app/main/default/objects/Volunteer_Assigment__c/Volunteer_Assigment__c.object-meta.xml
<CustomObject>
    <label>Volunteer Assigment</label>
    <nameField>
        <label>Volunteer Assigment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Assigments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>