force-app/main/default/objects/Volunteer_Assigment__c/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Volunteer_Assigments</relationshipName>
    <type>Lookup</type>
</CustomField>