force-app/main/default/objects/Volunteer_Assigment__c/fields/Assignment_Number__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Number__c</fullName>
    <displayFormat>AN-{0000}</displayFormat>
    <label>Assignment Number</label>
    <type>AutoNumber</type>
</CustomField>