force-app/main/default/objects/Volunteer_Assigment__c/fields/Duty__c.field-meta.xml
<CustomField>
    <fullName>Duty__c</fullName>
    <label>Duty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration Desk</fullName>
            </value>
            <value>
                <fullName>Stage Management</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Food Distribution</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Crowd Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>