force-app/main/default/objects/Volunteer_Assigment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Volunteer Assigments</relationshipLabel>
    <relationshipName>Volunteer_Assigments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>