force-app/main/default/objects/Volunteer_Assigment__c/fields/Reporting_Time__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Time__c</fullName>
    <label>Reporting Time</label>
    <type>DateTime</type>
</CustomField>