force-app/main/default/objects/Volunteer_Assigment__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Volunteer Assigments</relationshipLabel>
    <relationshipName>Volunteer_Assigments</relationshipName>
    <type>Lookup</type>
</CustomField>