force-app/main/default/objects/Volunteer_Assigment__c/fields/volunteers__c.field-meta.xml
<CustomField>
    <fullName>volunteers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>volunteers</label>
    <referenceTo>volunteer__c</referenceTo>
    <relationshipLabel>Volunteer Assigments</relationshipLabel>
    <relationshipName>Volunteer_Assigments</relationshipName>
    <type>Lookup</type>
</CustomField>